# gha-sandbox

./: .gitattributes  .gitignore  CMakeLists.txt
.github/workflows/: build-macos.yml  build-via-autotools.yml  build-via-cmake-msvc.yml  build-with-cmake-msvc.yml  build-with-mingw.yml  build-with-ubuntu.yml  gha-demo.yml
source/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  gha_sb-test.sh  gha_sb.c
source/cmake/: config.cmake  config.h.in
source/testdata/: gha_sb-test.sh
